RESOLVED FIXED197404
Long-standing rare crash under -[WKWebView _web_immediateActionAnimationControllerForHitTestResultInternal...]
https://bugs.webkit.org/show_bug.cgi?id=197404
Summary Long-standing rare crash under -[WKWebView _web_immediateActionAnimationContr...
Tim Horton
Reported 2019-04-29 22:33:23 PDT
Long-standing rare crash under -[WKWebView _web_immediateActionAnimationControllerForHitTestResultInternal...]
Attachments
Patch (3.25 KB, patch)
2019-04-29 22:33 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-04-29 22:33:31 PDT
Tim Horton
Comment 2 2019-04-29 22:33:33 PDT
WebKit Commit Bot
Comment 3 2019-04-30 10:37:53 PDT
Comment on attachment 368539 [details] Patch Clearing flags on attachment: 368539 Committed r244781: <https://trac.webkit.org/changeset/244781>
WebKit Commit Bot
Comment 4 2019-04-30 10:37:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.