Long-standing rare crash under -[WKWebView _web_immediateActionAnimationControllerForHitTestResultInternal...] https://bugs.webkit.org/show_bug.cgi?id=197404 <rdar://problem/24589331>

Reviewed by Wenson Hsieh.

* UIProcess/mac/WKImmediateActionController.mm:
(-[WKImmediateActionController _updateImmediateActionItem]):
(-[WKImmediateActionController menuItem:previewItemAtPoint:]):
(-[WKImmediateActionController menuItem:itemFrameForPoint:]):
(-[WKImmediateActionController _animationControllerForDataDetectedLink]):
Add some null checks; _webHitTestResult can be null if we (somehow) get
an immediate action gesture without having previously gotten a
mouseDidMoveOverElement from the Web Content process. Cover all our bases.


Canonical link: https://commits.webkit.org/211606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244781 268f45cc-cd09-0410-ab3c-d52691b4dbfc